--- a/v0.4_phrasecraft.html
+++ b/v0.4_phrasecraft.html
@@ -12,7 +12,17 @@
 </head>
 
 <body>
+<div class="players-container">
 
+	<div class="player1-container">
+    </div>
+    
+	<div class="player2-container">
+    </div>
+
+</div>
+
+</div>
 
 <script>
     
