--- a/v0.4_phrasecraft.html
+++ b/v0.4_phrasecraft.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Página de Preenchimento</title>
+    
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&family=Roboto+Mono:wght@400;700&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+    
   <style>
 	body {
 		font-family: 'Orbitron', sans-serif;
@@ -93,7 +96,7 @@
       height: 200px;
       border: 10px solid transparent;
       border-radius: 15%;
-      background: #fff;
+	  background-image: linear-gradient(-135deg, #171627, #111d4a, #171627, #111d4a);
       background-clip: padding-box;
       position: relative;
     }
@@ -105,7 +108,7 @@
       left: -10px;
       width: calc(100% + 20px);
       height: calc(100% + 20px);
-      background-image: conic-gradient(from 0deg, #8bc34a, #ffe68b, #ff69b4, #ffe68b, #8bc34a, #03a9f4, #ff69b4);
+      background-image: conic-gradient(from 135deg, #ff69b4, #ffe68b, #8bc34a, #03a9f4, #ff69b4);
       background-size: 400% 400%;
       animation: animate 10s linear infinite;
       border-radius: 15%;
