--- a/v0.5_phrasecraft.html
+++ b/v0.5_phrasecraft.html
@@ -52,50 +52,49 @@ body {
 	background-color: #171627;
 	box-shadow: 0 15px 30px rgba(0, 0, 0, 0.5), inset 0 0 10px rgba(255, 255, 255, 0.1);
 	border: 3px solid rgba(255, 255, 255, 0.2);
-	border-radius: 12px;
+	border-radius: 8px;
 	text-align: center;
 	width: 90%;
 	max-width: 600px;
-	max-height: 90%;
-	margin-bottom: 20px;
 	animation: fadeInScale 1s ease-out;
-    z-index: 1;
 }
 
 .players-container {
     position: relative;
     display: flex;
     justify-content: center;
-    align-items: center;
-    /* To accommodate two clocks side-by-side, we'll give it some space */
-    margin: 0 20px;
 }
 
 /* New container for the second clock to place it next to the first one */
 .player-container {
     position: relative;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     display: flex;
     justify-content: center;
-    align-items: center;
-    /* To accommodate two clocks side-by-side, we'll give it some space */
-    margin: 0 20px;
+}
+
+.player-content {
+    position: relative;
+    width: 70px;
+    height: 70px;
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    align-items: flex-start;
+    transform: translateY(calc((85px - 70px) / 2));
+    /*z-index: ;*/
 }
 
 .clock-face {
-    position: relative;
-    width: 180px;
-    height: 180px;
-    /* O fundo padrão do clock-face é azul */
+    position: absolute;
+    width: 85px;
+    height: 85px;
     background: linear-gradient(135deg, var(--blue-gradient-start), var(--blue-gradient-end));
     border-radius: 15px;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
     overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* Transição para a mudança de cor de fundo */
+    align-items: flex-start;
     transition: background 0.7s ease-in-out;
 }
 
@@ -107,7 +106,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    border-radius: 15px;
+    border-radius: 8px;
     /* A cor de preenchimento SEMPRE será cinza */
     background: conic-gradient(
         var(--grey-gradient-start) calc(var(--progress) * 1%),
@@ -135,20 +134,6 @@ body {
     }
 }
 
-.player-content {
-    /* visibility: hidden; Oculta visualmente, mas mantém o espaço */
-    width: 150px;
-    height: 150px;
-    padding: 5px 5px;
-    background-color: #ffffff;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    position: absolute;
-    z-index: 20;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
     </style>
 </head>
 <body>
