--- a/v0.2_phrasecraft.html
+++ b/v0.2_phrasecraft.html
@@ -91,10 +91,9 @@ body {
     position: relative;
     display: flex;
     justify-content: center;
-    border: 2px solid green;
+    /* border: 2px solid green; somente para organizar elementos */
 }
 
-/* New container for the second clock to place it next to the first one */
 .player-container {
     position: relative;
     width: 85px;
@@ -102,7 +101,7 @@ body {
     display: flex;
     justify-content: center;
     padding: 1%;
-    border: 2px solid green;
+    /* border: 2px solid green; somente para organizar elementos */
 }
 
 .player-content {
