--- a/v0.2_phrasecraft.html
+++ b/v0.2_phrasecraft.html
@@ -41,7 +41,10 @@ body {
 	padding-top: 1.2%;
 	font-family: 'Orbitron', sans-serif;
 	color: #00ccff;
-	text-shadow: 0 0 20px rgba(0, 255, 204, 0.8), 0 0 30px rgba(0, 255, 204, 0.6);
+    text-shadow:
+    0 0 15px rgba(0, 204, 255, 0.7), /* Tom da cor base mais claro */
+    0 0 25px rgba(0, 220, 255, 0.5), /* Um pouco mais claro e difuso */
+    0 0 35px rgba(0, 235, 255, 0.3); /* Mais claro e ainda mais difuso */
 	letter-spacing: 1.5px;
     overflow: hidden;
 }
@@ -108,7 +111,7 @@ body {
     position: relative;
     width: 70px;
     height: 70px;
-    background-color: #ffffff;
+	background: linear-gradient(-135deg, #000000, #3b0047, #660000, #000000);
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transform: translateY(calc((85px - 70px) / 2));
