--- a/v0.9_phrasecraft.html
+++ b/v0.9_phrasecraft.html
@@ -333,8 +333,8 @@
         #current-lesson {
             text-align: center;
             color: #f9fff2;
-            margin-bottom: 15px;
-            font-size: 20px;
+            margin-top: 5px;
+            font-size: 16px;
             font-weight: bold;
         }
 
@@ -619,11 +619,12 @@
             </div>
         </div>
 
-        <div id="current-lesson" style="text-align: center; color: #f9fff2; margin-bottom: 15px; font-size: 20px; font-weight: bold;"></div>
+        <div id="current-lesson"></div>
 
         <div class="content-row">
             <div class="video-container">
-                <video id="custom-video" controls style="width: 100%; height: 100%;"></video>
+                <video id="custom-video" controls style="width: 100%; height: 100%;">
+                </video>
             </div>
 
             <div id="buttons">
