--- a/v0.10_phrasecraft.html
+++ b/v0.10_phrasecraft.html
@@ -221,47 +221,51 @@
             transform: translateX(100%);
         }
 
-        /* New CSS for the header row containing 'Ajuda' and the close button */
-        .menu-header {
-            display: flex; /* Make it a flex container */
-            justify-content: space-between; /* Pushes items to the ends */
-            align-items: center; /* Vertically centers items */
-            width: 100%; /* Take full width of parent */
-            padding: 10px 20px; /* Adjust padding as needed */
-            box-sizing: border-box; /* Include padding in width */
-        }
-
-        #info {
-            background: rgba(255, 255, 255, 0.2);
-            max-width: 85px;
-            border-radius: 8px;
-            cursor: pointer;
-            color: #00ccff; /* Example color, adjust as desired */
-            font-size: 1.2em; /* Adjust font size */
-            font-weight: bold;
-            text-shadow: 0 0 10px rgba(0, 204, 255, 0.5); /* Matching text-shadow */
-            /* flex-grow: 1; Removido para permitir que o botão "Ajuda" tenha largura natural */
-            text-align: center; /* Centraliza o texto dentro do botão Ajuda */
-            padding: 5px 10px; /* Adicionado padding para melhor visualização */
-        }
-
-        .close-button {
-            /* Position changed to static within the flex container for correct alignment */
-            position: static;
-            width: 40px;
-            height: 40px;
-            background: rgba(255, 255, 255, 0.2);
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            z-index: 1001;
-            padding: 0;
-            border: none;
-            margin-left: auto; /* Pushes the button to the far right within the flex container */
-        }
+		/* New CSS for the header row containing 'Ajuda' and the close button */
+		.menu-header {
+		    display: flex;
+		    justify-content: space-between; /* ✨ REVERTIDO: Para empurrar Ajuda e Fechar para as extremidades */
+		    align-items: center;
+		    width: 100%;
+		    padding: 10px 20px;
+		    box-sizing: border-box;
+		    /* Remover 'gap' aqui, já que space-between e margens auto vão gerenciar o espaçamento */
+		}
+		
+		/* Ajustes para o .switch-container dentro do menu-header */
+		.menu-header .switch-container {
+		    margin-bottom: 0;
+		    margin: 0 auto; /* ✨ NOVO: Isso centralizará o switch-container entre os outros dois elementos */
+		    flex-shrink: 0;
+		    /* Remova margin-left: auto; e margin-right: auto; se estiverem aqui,
+		       pois a nova propriedade 'margin: 0 auto;' os substitui. */
+		}
+		
+		/* Ajustes para o .switch-label */
+		.menu-header .switch-label {
+		    min-width: unset;
+		    text-align: right;
+		    font-size: 1em;
+		    color: #00ccff;
+		    text-shadow: 0 0 10px rgba(0, 204, 255, 0.5);
+		    white-space: nowrap;
+		}
+		
+		/* Ajustes para o botão "Ajuda" */
+		#info {
+		    background: rgba(255, 255, 255, 0.1);
+		    border-radius: 8px;
+		    padding: 5px 10px;
+		    flex-shrink: 0;
+		    /* Remover margin-right: auto; daqui se estiver, não é necessário com justify-content: space-between */
+		}
+		
+		/* Ajustes para o botão "Fechar" */
+		.close-button {
+		    background: rgba(255, 255, 255, 0.1);
+		    flex-shrink: 0;
+		    /* Remover margin-left: auto; daqui se estiver, já que justify-content: space-between faz o trabalho */
+		}
 
         .close-button:hover {
             background: rgba(255, 255, 255, 0.4);
