--- a/v0.17_phrasecraft.html
+++ b/v0.17_phrasecraft.html
@@ -426,9 +426,9 @@
             padding: 0; /* ← MUDANÇA: remove padding-top */
         }
 
-        .video-container {
+        .video-container #custom-video {
     		position: relative;
-            width: 100%;
+            width: 99%;
             aspect-ratio: 16/9;
             position: relative;
             background-color: #000;
