--- a/v0.17_phrasecraft.html
+++ b/v0.17_phrasecraft.html
@@ -724,7 +724,7 @@
 // Lições disponíveis (nome do arquivo SRT e URL do vídeo)
 const lessons = [
     {
-        name: "Lady Gaga - Scheiße",
+        name: "Lady_Gaga-Scheiße.srt",
         srtFile: "Lady Gaga - Scheiße.srt",
         videoUrl: "https://files.catbox.moe/noor8m.mp4"
     },
@@ -734,7 +734,7 @@ const lessons = [
         videoUrl: "https://files.catbox.moe/vxoldg.mp4"
     },
     {
-        name: "New West - Those Eyes",
+        name: "New_West-Those_Eyes.srt",
         srtFile: "New West - Those Eyes.srt",
         videoUrl: "https://files.catbox.moe/k7xhth.mp4"
     }
