--- a/v0.18_phrasecraft.html
+++ b/v0.18_phrasecraft.html
@@ -134,8 +134,7 @@
             right: 0; /* Changed from 1% for full right alignment */
             width: 100vw;
             height: 100vh;
-            background-image: linear-gradient(-135deg, #171627, #111d4a, #171627, #111d4a);
-            background-color: #171627;
+            background-color: rgba(0, 0, 0, 0.8);
             font-family: 'Audiowide', sans-serif;
             z-index: 999;
             display: flex; /* Enable Flexbox */
