--- a/v0.18_phrasecraft.html
+++ b/v0.18_phrasecraft.html
@@ -436,9 +436,13 @@
             color: #333;
             box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);
         }
+        
         .palavra-na-frase { /* Added style for words in the displayed phrase */
-            margin-right: 5px;
+            margin-right: 1.2%;
             color: #0056b3; /* A distinct color for correctly placed words */
+            border: 1px solid #ccc; 
+            border-radius: 4px;
+            font-size: 0.8em;
             font-weight: bold;
         }
         
@@ -452,7 +456,6 @@
 
         .word-container {
             flex-wrap: wrap;
-            min-height: 60px; /* Match .phrase-container */
             width: 95%;
             border: 2px solid green;
             display: flex;
@@ -461,10 +464,10 @@
             padding: 10px;
         }
 
-        .palavra { /* Renamed from .word-card for consistency with JS */
+        .palavra { 
             background-color: #007bff;
             color: white;
-            padding: 5px 10px;
+            padding: 2px 5px; /* Change this line */
             margin: 5px; /* Added margin for spacing between words */
             border-radius: 6px;
             cursor: pointer;
@@ -1512,6 +1515,6 @@ function verificarProgressoLicao(lessonName) {
 
 // Inicializar a aplicação quando o DOM estiver carregado
 document.addEventListener('DOMContentLoaded', init);
-		</script>
-	</body>
-</html>
+</script>
+</body>
+	</html>
