--- a/v0.24_phrasecraft.html
+++ b/v0.24_phrasecraft.html
@@ -1321,6 +1321,9 @@ document.getElementById('desistir').onclick = function() {
             switchActiveClock();
 		
             if (isFraseCompleta) {
+player1Clock.stop();
+player2Clock.stop();
+		    
                 // Mostra o indicador de carregamento imediatamente
                 showLoading(true); 
 
@@ -1347,6 +1350,12 @@ document.getElementById('desistir').onclick = function() {
 
                     // Esconde o indicador de carregamento
                     showLoading(false);
+
+		    if (indiceFrase + 1 < frases.length) {
+                    switchActiveClock();
+                    } else {
+                    	console.log("Última frase da lição completa, não alternando o relógio.");
+                    }
                 }, 1500); // 1.5 segundo de delay
             }
         } else {
